<resources>
    <string name="app_name">Commandr for Google Now</string>
    <string name="title_activity_most_wanted_commands">Built-In Commands</string>
    <string name="no_third_party_support">Google Now has no third-party support. Instead Commandr has to listen to the \"Note to Self\" Interface</string>
    <string name="setup_test_first">To use a command you need to first say \"note to self\"</string>
    <string name="example_setup_test">Example: \"Note to self turn on flashlight\"</string>
    <string name="setup_test_question">Type the command for \"Pause Music\" below:</string>
    <string name="setup_passthrough_first">To take a normal note, just start with \"note\"</string>
    <string name="setup_passthrough_example">Example: \"Note do the laundry\"</string>
    <string name="about_message">Commandr was initially developed by Ryan Senanayake when he was 16 years old. See more at www.RSenApps.com
    \n\nSpecial thanks to Sky Kelsey and the Apptentive Team as well as Adriano Loiacono for the graphic design work!\n\nThanks to the following libraries:\nCard Library by gabrielmariotti github.com/gabrielmariotti/cardslib\n
    ListViewAnimations by nhaarman github.com/nhaarman/ListViewAnimations\nAndroidStaggeredGrid by etsy github.com/etsy/AndroidStaggeredGrid\nAndroid Donations Lib by dschuermann github.com/dschuermann/android-donations-lib\nMaterial Dialogs by afollestad github.com/afollestad/material-dialogs\nFloatingActionButton by makovkastar http://github.com/makovkastar/FloatingActionButton</string>
    <string name="fb_share_msg">Try out Commandr for Google Now, to add commands to Google Now, no root required! Now you can use Google Now to control your flashlight, toggle settings, control music playback, and much more!</string>
    <string name="vote_new_commands">Vote for New Commands</string>
    <string name="no_tasker_commands">Add commands within the Tasker app first.</string>
    <string name="say">Say </string>
    <string name="dialog_instructions">In the dialog, please select Commandr for Google Now as the default (Select Always)</string>
    <string name="some_devices_configure">For some devices, this dialog does not function properly and must be configured later within Google Now</string>
    <string name="swipe_left">Swipe Left to Continue</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="choose_preferred">Choose your preferred note app</string>
    <string name="lets_test">Let\'s Test.</string>
    <string name="welcome">Welcome to Commandr for Google Now</string>
    <string name="command_name">Command Name:</string>
    <string name="what_do">What would it do?</string>
    <string name="suggest_new_command">Suggest New Command</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="setup_wizard">Setup Wizard</string>
    <string name="about">About</string>
    <string name="bluetooth_phrases">turn on bluetooth, bluetooth on</string>
    <string name="bluetooth_title">Bluetooth On</string>
    <string name="bluetooth_off">Bluetooth Off</string>
    <string name="bluetooth_off_phrases">turn off bluetooth, bluetooth off</string>
    <string name="flashlight_title">Flashlight On</string>
    <string name="flashlight_phrases">turn on flashlight, flashlight on, torch</string>
    <string name="flashlight_off_title">Flashlight Off</string>
    <string name="flashlight_off_phrases">turn off flashlight, flashlight off</string>
    <string name="gps_title">GPS On</string>
    <string name="gps_phrases">turn on gps, gps on</string>
    <string name="gps_off_title">GPS Off</string>
    <string name="gps_off_phrases">turn off gps, gps off</string>
    <string name="next_music_title">Next Song</string>
    <string name="next_music_phrase">next song</string>
    <string name="pause_music_title">Pause Music</string>
    <string name="pause_music_phrase">pause music</string>
    <string name="previous_song_title">Previous Song</string>
    <string name="previous_song_phrase">previous song</string>
    <string name="read_unread_sms_title">Read Unread SMS</string>
    <string name="read_unread_sms_phrase">unread sms, unread texts</string>
    <string name="resume_music_title">Resume Music</string>
    <string name="resume_music_phrase">resume music</string>
    <string name="wifi_on_title">Wifi On</string>
    <string name="wifi_on_phrase">turn on wifi</string>
    <string name="wifi_off_title">Wifi Off</string>
    <string name="wifi_off_phrase">turn off wifi</string>
    <string name="no_command_found">No Command found for: </string>
    <string name="note_uninstalled">If you have uninstalled your default note-taking activity, please redo the setup wizard (in the action bar)</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="flashlight_activated">Flashlight Activated</string>
    <string name="turn_off">Turn Off</string>
    <string name="no_flashlight_access">Sorry your device does not provide access to the flashlight...</string>
    <string name="support_message">Commandr Support Message</string>
    <string name="new_message">New message from developer...</string>
    <string name="not_available_for_device">Sorry this command is not available for your device...</string>
    <string name="vote">Vote</string>
    <string name="enable_tasker">First enable Tasker in Tasker Settings.</string>
    <string name="tasker_permission">Tap to give Commandr permission to use Tasker. Check Allow External Access</string>
    <string name="install_tasker">Tap to install Tasker from the Play Store (Optional)</string>
    <string name="dialog_hidden">Dialog is hidden for your phone. Later, Google Now will prompt you with a similar dialog. When it does, choose Commandr.</string>
    <string name="default_set_successfully">Default set successfully...</string>
    <string name="test_correct_answer">note to self pause music</string>
    <string name="reminder_note_to_self">Remember to put \"Note to Self\" first!</string>
    <string name="no_punctuation">No punctuation</string>
    <string name="reinstall_commandr">Due to a bug in Tasker, please reinstall Commandr...</string>
    <string name="language_not_supported">This Language is not supported for TTS</string>
    <string name="tts_failed">TTS failed</string>
    <string name="suggestion_submitted">Thank you. Your suggestion has been added to the bottom of the list!</string>
    <string name="accessibility_description">This accessibility service will allow Commandr to listen to any text entered in Google Now. Commandr will not store any information and will only perform an action for a preconfigured command.</string>
    <string name="setup_accessibility_top">Google Now provides no third-party API. Instead Commandr has to listen to Google Now via an accessiblity service. This service will only give Commandr the ability to listen to text entered into Google Now and this information is not stored. If you are not comfortable with this, you may also use a limited version of Commandr which requires you to say \"Note to Self\" before every command.</string>
    <string name="setup_accessibility_bold">In System Settings, please enable Commandr\'s accessibility service. DO NOT accidentally enable Talkback</string>
    <string name="open_settings">Open Settings</string>
    <string name="limited">Use Limited Version</string>
    <string name="default_already_set">Default already setup...</string>
    <string name="accessibility_already_configured">Accessibility service already configured...</string>
    <string name="accessibility_configured">Accessibility Service Configured Successfully...</string>
    <string name="enable_interception">Enable Interception</string>
    <string name="tasker_commands">Tasker Commands</string>
    <string name="configure_built_in">Configure Built-In Commands</string>
    <string name="configure_tasker">Configure Tasker Commands</string>
    <string name="note_to_self_required">Say \"Note to Self\"</string>
    <string name="note_to_self_required_description">Say \"Note to Self\" before every command</string>
    <string name="change_reconfigure">To change this setting, please reconfigure Commandr</string>
    <string name="play_playlist_phrase">play playlist, listen to playlist</string>
    <string name="google_music_playlist">Google Music Playlist</string>
    <string name="title_activity_play_playlist">PlayPlaylistActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="note">note</string>
    <string name="done">Done</string>
    <string name="chatbot_phrases">chat</string>
    <string name="chatbot_title">Chatbot</string>
    <string name="chatbot_predicate_hint">conversation</string>
    <string name="playlist_predicate_hint">name</string>
    <string name="chatbot_response_failed">Sorry, Commandr is currently unable to interface with the Chatbot</string>
    <string name="fetch_response">Fetching response...</string>
    <string name="lampshade_phrases">control my lights</string>
    <string name="lampshade_title">LampShade.io</string>
    <string name="lampshade_predicate">Lampshade Command</string>
    <string name="data_phrases">turn on data</string>
    <string name="data_title">Cellular Data On</string>
    <string name="data_off_phrases">turn off data</string>
    <string name="data_off_title">Cellular Data Off</string>
    <string name="unread_gmail_phrases">read unread gmail, unread gmail</string>
    <string name="unread_gmail_title">Read Unread Gmail</string>
    <string name="fetching_gmail">Fetching Gmail...</string>
    <string name="wolfram_redirect">Redirecting...</string>
    <string name="no_unread">There are no unread messages. </string>
    <string name="one_unread">There is one unread message. </string>
    <string name="there_are">There are </string>
    <string name="unread_messages"> unread messages. </string>
    <string name="sent"> sent </string>
    <string name="error_gmail">There was an error communicating with GMail</string>
    <string name="wolfram_title">Wolfram Alpha</string>
    <string name="wolfram_phrases">wolfram</string>
    <string name="wolfram_hint">query</string>
    <string name="volume_percentage_title">Volume Percentage</string>
    <string name="volume_percentage_phrases">volume </string>
    <string name="volume_percentage_hint">x</string>
    <string name="shutdown_title">Shutdown (Root Only)</string>
    <string name="shutdown_phrases">shut down now, turn off phone</string>
    <string name="reboot_title">Restart Phone (Root Only)</string>
    <string name="reboot_phrases">reboot now, restart phone now</string>
    <string name="reboot_recovery_title">Reboot into Recovery (Root Only)</string>
    <string name="reboot_recovery_phrases">reboot into recovery now</string>
    <string name="raise_volume_phrase">raise volume</string>
    <string name="raise_volume_title">Raise Volume</string>
    <string name="return_previous_app_title">Return to Previous App</string>
    <string name="return_previous_app_summary">Return to the previous app after a command (this does not work if you are using Google Now Launcher)</string>
    <string name="stop">Stop</string>
    <string name="show_ads">Show Ads</string>
    <string name="show_ads_description">Trying to help pay for college so if possible, please don\'t disable them :)</string>
    <string name="donate">Donate</string>
    <string name="donate_description">Through Google Wallet, Paypal, or Flattr</string>
    <string name="xposed_title">Use Xposed (root only)</string>
    <string name="xposed_summary">Only need to enable Xposed if you want to use Commandr from Android Wear without saying take a note before the command</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="ready">Ready</string>
</resources>