<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enabled"
        android:title="@string/enable_interception" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notetoselfrequired"
        android:summary="@string/note_to_self_required_description"
        android:title="@string/note_to_self_required" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="closegoogle"
        android:summary="@string/return_previous_app_summary"
        android:title="@string/return_previous_app_title" />
    <Preference
        android:key="mostWanted"
        android:summary="@string/configure_built_in"
        android:title="@string/title_activity_most_wanted_commands" />
    <Preference
        android:key="taskerCommands"
        android:summary="@string/configure_tasker"
        android:title="@string/tasker_commands" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="usexposed"
        android:title="@string/xposed_title"
        android:summary="@string/xposed_summary" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="ads"
        android:title="@string/show_ads"
        android:summary="@string/show_ads_description" />
    <Preference
        android:key="donate"
        android:title="@string/donate"
        android:summary="@string/donate_description" />
</PreferenceScreen>
