<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/ready"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
        android:id="@+id/start"
        android:layout_width="0dp"
            android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:onClick="start"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:onClick="stop"
        android:text="@string/stop" />

    <Button
        android:id="@+id/play"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:onClick="play"
        android:text="@string/play" />
    </LinearLayout>

</LinearLayout>