<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/setup_accessibility_top"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/tV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tV1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/setup_accessibility_bold"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/done"

            android:visibility="gone" />


        <Button
            android:id="@+id/openSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/open_settings"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/limited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/limited"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>