<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/no_third_party_support"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/tV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tV1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dialog_instructions"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tV3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tV2"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/some_devices_configure"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/swipe_left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:visibility="gone" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_above="@id/bottomLayout"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/openDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/open_dialog" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLayout"
        android:layout_below="@id/tV3"
        android:src="@drawable/setup_intent_screenshot" />
</RelativeLayout>